--- a/Views/Contrato/FinalizarContrato.cshtml
+++ b/Views/Contrato/FinalizarContrato.cshtml
@@ -44,23 +44,32 @@
         </form>
         
         <dd class="col-6">
-         @if(ViewBag.Deuda < 0 || ViewBag.Deuda == null){
-             @if (ViewBag.Multa != null) {
-                  <h5>MULTA CORRESPONDIENTE</h5>
-                 <h5>$ @ViewBag.Multa</h5>
-                  <a asp-controller="Pago" asp-action="agregarpago" asp-route-id="@Model.Id" title="Agregar pago"><i class="fa fa-plus" style="font-size:25px;" id="agregar"></i>   Pagar Multa</a>
-                <div>
-             <form asp-action="Finalizar">
-            <input type="hidden" name="id" value="@Model.Id" />
-               <div class="form-group p-5" >
-                <input type="submit" value="Finalizar contrato" class="btn btn-danger" />    
-            </div>
-        </form>
-                </div>
-                }
-         }else{
-            <p >El contrato posee @ViewBag.Deuda meses de deuda, no puede cancelar el contrato</p>
-         }
+                    @if (ViewBag.Deuda < 0 || ViewBag.Deuda == null)
+                    {
+                        @if (ViewBag.Multa != null)
+                        {
+                            <h5>MULTA CORRESPONDIENTE</h5>
+                            <h5>$ @ViewBag.Multa</h5>
+                            <a asp-controller="Pago" asp-action="agregarpago" asp-route-id="@Model.Id" title="Agregar pago"><i
+                                    class="fa fa-plus" style="font-size:25px;" id="agregar"></i> Pagar Multa</a>
+                        }
+                        @if(ViewBag.CalculoValidado == true){
+                             <div>
+                                <form asp-action="Finalizar">
+                                    <input type="hidden" name="fechaFinalizacion" value="#FechaInicio" />
+                                    <input type="hidden" name="id" value="@Model.Id" />
+                                    <div class="form-group p-5">
+                                        <input type="submit" value="Finalizar contrato" class="btn btn-success
+                                        " />
+                                    </div>
+                                </form>
+                            </div>
+                        }
+                    }
+                    else
+                    {
+                        <p>El contrato posee @ViewBag.Deuda meses de deuda, no puede cancelar el contrato</p>
+                    }
         </dd>
     </div>
 
@@ -93,3 +102,15 @@
 <div>
     <a asp-action="Index">Volver al listado</a>
 </div>
+<script>
+    // Obtener la fecha de hoy
+    const hoy = new Date();
+    // Formatear la fecha en el formato YYYY-MM-DD
+    const anio = hoy.getFullYear();
+    const mes = String(hoy.getMonth() + 1).padStart(2, '0'); // Sumar 1 porque getMonth() devuelve un índice de 0 a 11
+    const dia = String(hoy.getDate()).padStart(2, '0');
+    const fechaFormateada = `${anio}-${mes}-${dia}`;
+
+    // Establecer la fecha en el campo de entrada
+    document.getElementById('fechaInicio').value = fechaFormateada;
+</script>
